Add links aos botoes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Carrosel</title>
 </head>
@@ -26,13 +26,10 @@
                 <img src="./assets/img1.jpg" alt="imagem-de-bali">
                 <div class="content">
                     <h2 class="title">Bali</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptatibus
-                        iusto, officiis
-                        possimus maiores, doloremque excepturi sequi iste ad non odit porro quas aperiam! Sed labore
-                        officia corrupti inventore delectus.</p>
+                    <p class="description">Bali é uma ilha da Indonésia conhecida por suas montanhas vulcânicas repletas de florestas, seus arrozais, suas praias e seus recifes de coral. A ilha abriga locais religiosos, como o templo Uluwatu, localizado na beira de um penhasco.</p>
                     <div class="buttons">
-                        <button>Saiba Mais</button>
-                        <button>Acessar</button>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Bali" target="_blank"><button>Saiba Mais</button></a>
+                        <a class="buttons" href="https://bali.com/" target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -40,13 +37,10 @@
                 <img src="./assets/img2.jpg" alt="imagem-de-paris">
                 <div class="content">
                     <h2 class="title">Paris</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptatibus
-                        iusto, officiis
-                        possimus maiores, doloremque excepturi sequi iste ad non odit porro quas aperiam! Sed labore
-                        officia corrupti inventore delectus.</p>
+                    <p class="description">Paris, a capital da França, é uma importante cidade europeia e um centro mundial de arte, moda, gastronomia e cultura. A cidade é conhecida por monumentos como a Torre Eiffel e a Catedral de Notre-Dame.</p>
                     <div class="buttons">
-                        <button>Saiba Mais</button>
-                        <button>Acessar</button>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Paris" target="_blank"><button>Saiba Mais</button></a>
+                        <a class="buttons" href="https://www.pariscityvision.com/pt" target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -54,13 +48,10 @@
                 <img src="./assets/img3.jpg" alt="imagem-de-roma">
                 <div class="content">
                     <h2 class="title">Roma</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptatibus
-                        iusto, officiis
-                        possimus maiores, doloremque excepturi sequi iste ad non odit porro quas aperiam! Sed labore
-                        officia corrupti inventore delectus.</p>
+                    <p class="description">Roma, a capital da Itália, é uma cidade cosmopolita, enorme, com quase 3.000 anos de arte, arquitetura e cultura influentes no mundo todo e à mostra. Ruínas antigas como o Fórum e o Coliseu evocam o poder do antigo Império Romano.</p>
                     <div class="buttons">
-                        <button>Saiba Mais</button>
-                        <button>Acessar</button>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Roma" target="_blank"><button>Saiba Mais</button></a>
+                        <a class="buttons" href="https://www.turismoroma.it/en" target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -68,13 +59,10 @@
                 <img src="./assets/img4.jpg" alt="imagem-de-veneza">
                 <div class="content">
                     <h2 class="title">Veneza</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa voluptatibus
-                        iusto, officiis
-                        possimus maiores, doloremque excepturi sequi iste ad non odit porro quas aperiam! Sed labore
-                        officia corrupti inventore delectus.</p>
+                    <p class="description">Veneza, a capital da região de Vêneto, no norte da Itália, é formada por mais de 100 pequenas ilhas em uma lagoa no Mar Adriático. A cidade não tem estradas, apenas canais (como a via Grand Canal), repletos de palácios góticos e renascentistas.</p>
                     <div class="buttons">
-                        <button>Saiba Mais</button>
-                        <button>Acessar</button>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Veneza" target="_blank"><button>Saiba Mais</button></a>
+                        <a class="buttons" href="https://venezaitalia.com.br/" target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
