--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <nav>
             <a href="">Home</a>
-            <a href="">Informações</a>
-            <a href="">Fale Conosco</a>
+            <a href="https://www.linkedin.com/in/domingos-rossi/" target="_blank">Informações</a>
+            <a href="https://wa.me/5517997077537?text=Ol%C3%A1%20seja%20bem%20vindo(a)!" target="_blank">Fale Conosco</a>
         </nav>
     </header>
 
