--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav>
             <a href="">Home</a>
             <a href="https://www.linkedin.com/in/domingos-rossi/" target="_blank">Informações</a>
-            <a href="https://wa.me/5517997077537?text=Ol%C3%A1%20seja%20bem%20vindo(a)!" target="_blank">Fale Conosco</a>
+            <a href="https://wa.me/5517997077537?text=Ol%C3%A1%20seja%20bem%20vindo(a)!" target="_blank">Fale
+                Conosco</a>
         </nav>
     </header>
 
@@ -26,9 +27,12 @@
                 <img src="./assets/img1.jpg" alt="imagem-de-bali">
                 <div class="content">
                     <h2 class="title">Bali</h2>
-                    <p class="description">Bali é uma ilha da Indonésia conhecida por suas montanhas vulcânicas repletas de florestas, seus arrozais, suas praias e seus recifes de coral. A ilha abriga locais religiosos, como o templo Uluwatu, localizado na beira de um penhasco.</p>
+                    <p class="description">Bali é uma ilha da Indonésia conhecida por suas montanhas vulcânicas repletas
+                        de florestas, seus arrozais, suas praias e seus recifes de coral. A ilha abriga locais
+                        religiosos, como o templo Uluwatu, localizado na beira de um penhasco.</p>
                     <div class="buttons">
-                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Bali" target="_blank"><button>Saiba Mais</button></a>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Bali" target="_blank"><button>Saiba
+                                Mais</button></a>
                         <a class="buttons" href="https://bali.com/" target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
@@ -37,10 +41,14 @@
                 <img src="./assets/img2.jpg" alt="imagem-de-paris">
                 <div class="content">
                     <h2 class="title">Paris</h2>
-                    <p class="description">Paris, a capital da França, é uma importante cidade europeia e um centro mundial de arte, moda, gastronomia e cultura. A cidade é conhecida por monumentos como a Torre Eiffel e a Catedral de Notre-Dame.</p>
+                    <p class="description">Paris, a capital da França, é uma importante cidade europeia e um centro
+                        mundial de arte, moda, gastronomia e cultura. A cidade é conhecida por monumentos como a Torre
+                        Eiffel e a Catedral de Notre-Dame.</p>
                     <div class="buttons">
-                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Paris" target="_blank"><button>Saiba Mais</button></a>
-                        <a class="buttons" href="https://www.pariscityvision.com/pt" target="_blank"><button>Acessar</button></a>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Paris" target="_blank"><button>Saiba
+                                Mais</button></a>
+                        <a class="buttons" href="https://www.pariscityvision.com/pt"
+                            target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -48,10 +56,14 @@
                 <img src="./assets/img3.jpg" alt="imagem-de-roma">
                 <div class="content">
                     <h2 class="title">Roma</h2>
-                    <p class="description">Roma, a capital da Itália, é uma cidade cosmopolita, enorme, com quase 3.000 anos de arte, arquitetura e cultura influentes no mundo todo e à mostra. Ruínas antigas como o Fórum e o Coliseu evocam o poder do antigo Império Romano.</p>
+                    <p class="description">Roma, a capital da Itália, é uma cidade cosmopolita, enorme, com quase 3.000
+                        anos de arte, arquitetura e cultura influentes no mundo todo e à mostra. Ruínas antigas como o
+                        Fórum e o Coliseu evocam o poder do antigo Império Romano.</p>
                     <div class="buttons">
-                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Roma" target="_blank"><button>Saiba Mais</button></a>
-                        <a class="buttons" href="https://www.turismoroma.it/en" target="_blank"><button>Acessar</button></a>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Roma" target="_blank"><button>Saiba
+                                Mais</button></a>
+                        <a class="buttons" href="https://www.turismoroma.it/en"
+                            target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -59,10 +71,14 @@
                 <img src="./assets/img4.jpg" alt="imagem-de-veneza">
                 <div class="content">
                     <h2 class="title">Veneza</h2>
-                    <p class="description">Veneza, a capital da região de Vêneto, no norte da Itália, é formada por mais de 100 pequenas ilhas em uma lagoa no Mar Adriático. A cidade não tem estradas, apenas canais (como a via Grand Canal), repletos de palácios góticos e renascentistas.</p>
+                    <p class="description">Veneza, a capital da região de Vêneto, no norte da Itália, é formada por mais
+                        de 100 pequenas ilhas em uma lagoa no Mar Adriático. A cidade não tem estradas, apenas canais
+                        (como a via Grand Canal), repletos de palácios góticos e renascentistas.</p>
                     <div class="buttons">
-                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Veneza" target="_blank"><button>Saiba Mais</button></a>
-                        <a class="buttons" href="https://venezaitalia.com.br/" target="_blank"><button>Acessar</button></a>
+                        <a class="buttons" href="https://pt.wikipedia.org/wiki/Veneza" target="_blank"><button>Saiba
+                                Mais</button></a>
+                        <a class="buttons" href="https://venezaitalia.com.br/"
+                            target="_blank"><button>Acessar</button></a>
                     </div>
                 </div>
             </div>
@@ -76,7 +92,7 @@
                 </div>
             </div>
 
-<div class="thumb-item">
+            <div class="thumb-item">
                 <img src="./assets/img2.jpg" alt="foto-cidade-paris">
                 <div class="content">
                     <h3>Paris</h3>
@@ -101,13 +117,14 @@
             </div>
         </div>
         <div class="arrows">
-            <button class="back"> < </button>
-            <button class="next"> > </button>
+            <button class="back">
+                < </button>
+                    <button class="next"> > </button>
         </div>
     </main>
 
 
-<script src="./scripts.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
